--- a/app/views/internships/show.html.erb
+++ b/app/views/internships/show.html.erb
@@ -46,11 +46,6 @@
 </p>
 
 <p>
-  <strong>String:</strong>
-  <%= @internship.string %>
-</p>
-
-<p>
   <strong>Salary:</strong>
   <%= @internship.salary %>
 </p>
@@ -78,6 +73,11 @@
 <p>
   <strong>Deadline:</strong>
   <%= @internship.deadline %>
+</p>
+
+<p>
+  <strong>Status:</strong>
+  <%= @internship.status %>
 </p>
 
 <%= link_to 'Edit', edit_internship_path(@internship) %> |
