--- a/app/views/internships/index.html.erb
+++ b/app/views/internships/index.html.erb
@@ -14,13 +14,13 @@
       <th>Intern tasks</th>
       <th>Internship duration</th>
       <th>Schedule</th>
-      <th>String</th>
       <th>Salary</th>
       <th>Conditions</th>
       <th>Application contacts</th>
       <th>Application description</th>
       <th>Application materials</th>
       <th>Deadline</th>
+      <th>Status</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -37,13 +37,13 @@
         <td><%= internship.intern_tasks %></td>
         <td><%= internship.internship_duration %></td>
         <td><%= internship.schedule %></td>
-        <td><%= internship.string %></td>
         <td><%= internship.salary %></td>
         <td><%= internship.conditions %></td>
         <td><%= internship.application_contacts %></td>
         <td><%= internship.application_description %></td>
         <td><%= internship.application_materials %></td>
         <td><%= internship.deadline %></td>
+        <td><%= internship.status %></td>
         <td><%= link_to 'Show', internship %></td>
         <td><%= link_to 'Edit', edit_internship_path(internship) %></td>
         <td><%= link_to 'Destroy', internship, method: :delete, data: { confirm: 'Are you sure?' } %></td>
