Bootstrap for internship new done

--- a/app/views/internships/index.html.erb
+++ b/app/views/internships/index.html.erb
@@ -38,13 +38,16 @@
         <td><%= internship.places_available %></td>
         <td><%= internship.intern_tasks %></td>
         <td><%= internship.internship_duration %></td>
+        <td><%= internship.internship_duration_none %></td>
         <td><%= internship.schedule %></td>
         <td><%= internship.salary %></td>
+        <td><%= internship.salary_none %></td>
         <td><%= internship.conditions %></td>
         <td><%= internship.application_contacts %></td>
         <td><%= internship.application_description %></td>
         <td><%= internship.application_materials %></td>
         <td><%= internship.deadline %></td>
+        <td><%= internship.deadline_none %></td>
         <td><%= internship.status %></td>
         <td><%= link_to 'Show', internship %></td>
         <td><%= link_to 'Edit', edit_internship_path(internship) %></td>
