--- a/app/views/internships/show.html.erb
+++ b/app/views/internships/show.html.erb
@@ -43,6 +43,7 @@
 <p>
   <strong>Internship duration:</strong>
   <%= @internship.internship_duration %>
+  <%= @internship.internship_duration_none %>
 </p>
 
 <p>
@@ -53,6 +54,7 @@
 <p>
   <strong>Salary:</strong>
   <%= @internship.salary %>
+  <%= @internship.salary_none %>
 </p>
 
 <p>
@@ -80,6 +82,7 @@
 <p>
   <strong>Deadline:</strong>
   <%= @internship.deadline %>
+  <%= @internship.deadline_none %>
 </p>
 
 <p>
