--- a/app/assets/stylesheets/internships.scss
+++ b/app/assets/stylesheets/internships.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the internships controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+h1 {
+  font-size: 2rem;
+  font-weight: 600;
+  margin-top: 2rem;
+}
+
+textarea.form-control {
+  height: 135px;
+}
+
+.navbar-nav .form-inline {
+  margin-left: 0;
+}
