--- a/app/views/internships/_form.html.erb
+++ b/app/views/internships/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: internship, local: true) do |form| %>
+<%= form_with(model: internship, local: true, :class => 'col-6 m-auto' ) do |form| %>
   <% if internship.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(internship.errors.count, "error") %> prohibited this internship from being saved:</h2>
@@ -11,92 +11,129 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
+  <h1 class="mb-4">О компании</h1>
+
+  <div class="field form-group">
+    <%= form.label "Ваш email" %>
+    <%= form.text_field :email, :class => 'form-control' %>
+    <small id="emailHelp" class="form-text text-muted">Будьте внимательны. Редактировать или закрыть вакансию можно только по ссылке, высланной на этот адрес.</small>
   </div>
 
-  <div class="field">
-    <%= form.label :company_name %>
-    <%= form.text_field :company_name %>
+  <div class="field form-group">
+    <%= form.label "Название компании" %>
+    <%= form.text_field :company_name, :class => 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :company_specialty %>
-    <%= form.select :company_specialty, options_for_select([["IT"], ["Дизайн"], ["Искусство"], ["Развлечения"], ["Промышленность"], ["Маркетинг"]]), include_blank: true%>
+  <div class="field form-group">
+    <%= form.label "Сфера деятельности компании" %>
+    <%= form.select :company_specialty, options_for_select([["IT"], ["Дизайн"], ["Искусство"], ["Развлечения"], ["Промышленность"], ["Маркетинг"]]), {}, {:class => 'custom-select'}%>
   </div>
 
-  <div class="field">
-    <%= form.label :company_description %>
-    <%= form.text_area :company_description %>
+  <div class="field form-group">
+    <%= form.label "Опишите компанию" %>
+    <%= form.text_area :company_description, :class => 'form-control', 'aria-label' => 'With textarea' %>
+    <small id="company_descriptionHelp" class="form-text text-muted">Перечислите особенности вашей компании, клиенты, проекты. Почему студентам стоит выбрать именно вас?</small>
   </div>
 
-  <div class="field">
-    <%= form.label :social_network_link %>
-    <%= form.text_field :social_network_link %>
+  <div class="field form-group">
+    <%= form.label "Сайт/соцсети компании" %>
+    <%= form.text_field :social_network_link, :class => 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :position %>
-    <%= form.text_field :position %>
+  <h1>Требования к стажеру</h1>
+  <small id="h1Help" class="form-text text-muted mb-4">Максимально подробно опишите, что вы ожидаете от кандидата</small>
+
+  <div class="field form-group">
+    <%= form.label "На какую позицию?" %>
+    <%= form.text_field :position, :class => 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :places_available %>
-    <%= form.number_field :places_available %>
+  <div class="field form-group">
+    <%= form.label "Сколько человек вы ищете?" %>
+    <%= form.number_field :places_available, :class => 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :intern_tasks %>
-    <%= form.text_area :intern_tasks %>
+  <div class="field form-group">
+    <%= form.label "Что стажер должен делать?" %>
+    <%= form.text_area :intern_tasks, :class => 'form-control', 'aria-label' => 'With textarea' %>
+    <small id="intern_tasksHelp" class="form-text text-muted">Опишите как можно подробнее задачи стажера, так студентам будет легче понять, что от них хотят.</small>
   </div>
 
-  <div class="field">
-    <%= form.label :internship_duration %>
-    <%= form.date_select :internship_duration %>
+  <div class="field form-group flex-column">
+    <div>
+      <%= form.label "Сколько длится стажировка?" %>
+    </div>
+    <div class="row">
+      <div class="col">
+        <%= form.date_select :internship_duration %>
+      </div>
+      <div class="col">
+        <%= form.check_box :internship_duration_none, {}, "1", "0" %>
+        <%= form.label "Бессрочно" %>
+        </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :schedule%>
-    <%= form.select :schedule, options_for_select([["Полная"], ["Частичная"], ["Удаленная"], ["Смешанная"]]), include_blank: true%>
+  <div class="field form-group">
+    <%= form.label "Занятость" %>
+    <%= form.select :schedule, options_for_select([["Полная"], ["Частичная"], ["Удаленная"], ["Смешанная"]]), {}, {:class => 'custom-select'} %>
   </div>
 
-  <div class="field">
-    <%= form.label :salary %>
-    <%= form.number_field :salary %>
+  <div class="field form-group">
+    <%= form.label "Стажировка оплачивается?" %>
+    <%= form.number_field :salary, :class => 'form-control' %>
+    <%= form.check_box :salary_none, {}, "1", "0" %>
+    <%= form.label "Нет" %>
   </div>
 
-  <div class="field">
-    <%= form.label :conditions %>
-    <%= form.text_area :conditions %>
+  <div class="field form-group">
+    <%= form.label "Что предлагаете вы?" %>
+    <%= form.text_area :conditions, :class => 'form-control', 'aria-label' => 'With textarea' %>
+    <small id="conditionsHelp" class="form-text text-muted">Условия стажировки, возможность дальнейшего трудоустройства, офис, команда, плюшки.</small>
   </div>
 
-  <div class="field">
-    <%= form.label :application_contacts %>
-    <%= form.text_field :application_contacts %>
+  <h1 class="mb-4">Заявка</h1>
+
+  <div class="field form-group">
+    <%= form.label "Куда отправить заявку?" %>
+    <%= form.text_field :application_contacts, :class => 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :application_description %>
-    <%= form.text_area :application_description %>
+  <div class="field form-group">
+    <%= form.label "Что нужно прислать?" %>
+    <%= form.text_area :application_description, :class => 'form-control', 'aria-label' => 'With textarea' %>
+    <small id="application_descriptionHelp" class="form-text text-muted">Что вам нужно: портфолио, резюме, тестовое задание или все вместе? Детально опишите требования.</small>
   </div>
 
-  <div class="field">
-    <%= form.label :application_materials %>
-    <%= form.file_field :application_materials %>
+  <div class="field form-group">
+    <%= form.label "Материалы, которые будут полезны при выполнении тестового задания"  %>
+    <%= form.file_field :application_materials, :type => 'file', :class => 'form-control-file' %>
+    <small id="application_materialsHelp" class="form-text text-muted">Если есть.</small>
   </div>
 
-  <div class="field">
-    <%= form.label :deadline %>
-    <%= form.date_select :deadline %>
+  <div class="field form-group flex-column">
+    <div>
+      <%= form.label "Дедлайн" %>
+    </div>
+    <div class="row">
+      <div class="col">
+        <%= form.date_select :deadline %>
+      </div>
+      <div class="col">
+        <%= form.check_box :deadline_none, {}, "1", "0" %>
+        <%= form.label "Бессрочно" %>
+        </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :status %>
-    <%= form.number_field :status %>
+  <div class="field form-group">
+    <% form.label :status %>
+    <% form.number_field :status %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit 'Далее', :class => 'btn btn-primary' %>
   </div>
+
+  <%# btn btn-primary %>
 <% end %>
