--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,23 @@
   </head>
 
   <body>
-    <nav>
-      <aside>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+      <aside class="collapse navbar-collapse d-flex">
         <% if user_signed_in? %>
-          <%= current_user.email %>
-          <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+          <div class="navbar-nav">
+            <%= link_to 'Стажировки', internships_path, :class => "nav-item nav-link" %>
+            <%= link_to 'Вакансии', jobs_path, :class => "nav-item nav-link" %>
+            <%= link_to 'Задания', tasks_path, :class => "nav-item nav-link" %>
+            <%= link_to 'Гостевые лекции', public_talks_path, :class => "nav-item nav-link" %>
+            <%= link_to 'Задать вопрос', questions_path, :class => "nav-item nav-link" %>
+            <% current_user.email %>
+          </div>
+          <form class="form-inline ml-auto">
+            <%= link_to 'Выйти', destroy_user_session_path, method: :delete, :class => "btn btn-sm btn-outline-secondary" %>
+          </form>
         <% else %>
-          <%= link_to 'Register', new_user_registration_path %>
-          <%= link_to 'Login', new_user_session_path %>
+          <%= link_to 'Register', new_user_registration_path, :class => "nav-item nav-link" %>
+          <%= link_to 'Login', new_user_session_path, :class => "nav-item nav-link" %>
         <% end %>
       </aside>
     </nav>
