Bootstrap for Questions and Public_talks done

--- a/app/views/internships/_form.html.erb
+++ b/app/views/internships/_form.html.erb
@@ -85,7 +85,7 @@
 
   <div class="field form-group">
     <%= form.label "Стажировка оплачивается?" %>
-    <%= form.textarea_field :salary, :class => 'form-control' %>
+    <%= form.text_field :salary, :class => 'form-control' %>
     <%= form.check_box :salary_none, {}, "1", "0" %>
     <%= form.label "Нет" %>
   </div>
