--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -45,7 +45,7 @@
   </div>
 
   <h1>Техническое задание</h1>
-  <small id="h1Help" class="form-text text-muted mb-4">Максимально подробно опишите, что именно вы ожидаете получить</small>
+  <small id="h1Help" class="form-text text-muted mb-4">Максимально подробно опишите, что именно вы ожидаете получить.</small>
 
   <div class="field form-group">
     <%= form.label "Какой специалист вам нужен?" %>
