--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,36 @@
       <aside class="collapse navbar-collapse d-flex">
         <% if user_signed_in? %>
           <div class="navbar-nav">
-            <%= link_to 'Стажировки', internships_path, :class => "nav-item nav-link" %>
-            <%= link_to 'Вакансии', jobs_path, :class => "nav-item nav-link" %>
-            <%= link_to 'Задания', tasks_path, :class => "nav-item nav-link" %>
-            <%= link_to 'Гостевые лекции', public_talks_path, :class => "nav-item nav-link" %>
-            <%= link_to 'Задать вопрос', questions_path, :class => "nav-item nav-link" %>
+            <% if current_page?(internships_path) %>
+              <%= link_to 'Стажировки', internships_path, :class => "nav-item nav-link active" %>
+            <% else %>
+              <%= link_to 'Стажировки', internships_path, :class => "nav-item nav-link" %>
+            <% end %>
+
+            <% if current_page?(jobs_path) %>
+              <%= link_to 'Вакансии', jobs_path, :class => "nav-item nav-link active" %>
+            <% else %>
+              <%= link_to 'Вакансии', jobs_path, :class => "nav-item nav-link" %>
+            <% end %>
+
+            <% if current_page?(tasks_path) %>
+              <%= link_to 'Задания', tasks_path, :class => "nav-item nav-link active" %>
+            <% else %>
+              <%= link_to 'Задания', tasks_path, :class => "nav-item nav-link" %>
+            <% end %>
+
+            <% if current_page?(public_talks_path) %>
+              <%= link_to 'Гостевые лекции', public_talks_path, :class => "nav-item nav-link active" %>
+            <% else %>
+              <%= link_to 'Гостевые лекции', public_talks_path, :class => "nav-item nav-link" %>
+            <% end %>
+
+            <% if current_page?(questions_path) %>
+              <%= link_to 'Задать вопрос', questions_path, :class => "nav-item nav-link active" %>
+            <% else %>
+              <%= link_to 'Задать вопрос', questions_path, :class => "nav-item nav-link" %>
+            <% end %>
+
             <% current_user.email %>
           </div>
           <form class="form-inline ml-auto">
