--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -71,6 +71,8 @@
     <%= form.text_area :barter %>
   </div>
 
+  <% form.number_field :step, value: 1 %>
+
   <div class="actions">
     <%= form.submit %>
   </div>
