--- a/app/views/tasks/new_step_1.html.erb
+++ b/app/views/tasks/new_step_1.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: @internship, local: true) do |form| %>
-  <% if @internship.errors.any? %>
+<%= form_with(model: @task, local: true) do |form| %>
+  <% if @task.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@internship.errors.count, "error") %> prohibited this internship from being saved:</h2>
+      <h2><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h2>
 
       <ul>
-      <% @internship.errors.full_messages.each do |message| %>
+      <% @task.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -43,4 +43,4 @@
   </div>
 <% end %>
 
-<%= link_to 'Back', internships_path %>
+<%= link_to 'Back', tasks_path %>
